--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTIPE html>
-<html>
+<!DOCTYPE html>
+
 <html lang="ru">
 <meta charset="utf-8">
 <title>Nerd's</title>
@@ -29,7 +29,9 @@
       <a class="cart" href="#">Корзина</a>
     </div>
   </div>
+</div>
   </header>
+
   <main class="container">
     <div class="promo">
       <h2 class="promo-title"> Долго, дорого, скрупулёзно.</h2>
@@ -42,7 +44,7 @@
         <h3 class="order-title">Веб-сайты</h3>
         <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
         <a class="btn" href="#">Заказать</a>
-      </div
+      </div>
       <div class="index-order-mobile-app">
         <img src="img/index-mobile-app"  width="60" height="30" alt="mobile app">
         <h3 class="order-title">Приложения</h3>
@@ -85,6 +87,7 @@
       <img src="img/index-logo4.png" width="120" height="60" alt="Borodinsky">
     </div>
   </main>
+
   <footer class="main-footer">
     <div class="container">
       <section class="footer-map">
